--- a/Blockchain/ToDoList/src/index.html
+++ b/Blockchain/ToDoList/src/index.html
@@ -35,7 +35,7 @@
 <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="http://www.dappuniversity.com/free-download"
-            target="_blank">Dapp University | Todo List</a>
+            target="_blank">Gokulnpc | Todo List</a>
         <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap d-none d-sm-none d-sm-block">
                 <small><a class="nav-link" href="#"><span id="account"></span></a></small>
@@ -49,10 +49,10 @@
                     <p class="text-center">Loading...</p>
                 </div>
                 <div id="content">
-                    <form onSubmit="App.createTask(); return false;">
+                    <!-- <form onSubmit="App.createTask(); return false;">
                         <input id="newTask" type="text" class="form-control" placeholder="Add task..." required>
                         <input type="submit" hidden="">
-                    </form>
+                    </form> -->
                     <ul id="taskList" class="list-unstyled">
                         <div class="taskTemplate" class="checkbox" style="display: none">
                             <label>
@@ -70,6 +70,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="vendor/truffle-contract/dist/truffle-contract.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js"
+        integrity="sha256-nWBTbvxhJgjslRyuAKJHK+XcZPlCnmIAAMixz6EefVk=" crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </body>
 
