--- a/Blockchain/ToDoList/src/index.html
+++ b/Blockchain/ToDoList/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dapp University | Todo List</title>
+    <title>Gokulnpc | Todo List</title>
     <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         main {
@@ -34,8 +34,7 @@
 
 <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="http://www.dappuniversity.com/free-download"
-            target="_blank">Gokulnpc | Todo List</a>
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#" target="_blank">Gokulnpc | Todo List</a>
         <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap d-none d-sm-none d-sm-block">
                 <small><a class="nav-link" href="#"><span id="account"></span></a></small>
