--- a/Blockchain/ICO/src/index.html
+++ b/Blockchain/ICO/src/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dapp University | Todo List</title>
-    <!--Bootstrap-->
+    <title>NPC Token ICO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
@@ -23,24 +22,25 @@
                 <br />
             </div>
 
-            <div class="loader">
+            <div id="loader">
                 <p class="text-center">Loading...</p>
             </div>
 
             <div id="content" class="text-center">
                 <p>
                     Introducing NPC Token (NPC)!!
-                    Token price is <span class="token-price"></span>Ether.
-                    You currently have <span class="npc-balance"></span>NPC
+                    Token price is <span class="token-price"></span>&nbsp;Ether.
+                    You currently have <span class="npc-balance"></span>&nbsp;NPC
                 </p>
                 <br />
                 <form role="form">
                     <div class="form-group">
                         <div class="input-group mb-3">
                             <input type="number" class="form-control" id="numberOfTokens" name="number" value="1"
-                                min="1" pattern="[0-9]" placeholder="Recipient's username"
-                                aria-label="Recipient's username" aria-describedby="button-addon2">
-                            <button class="btn btn-primary" type="button" id="button-addon2">Buy Tokens</button>
+                                min="1" pattern="[0-9]" placeholder="No of Tokens" aria-label="Recipient's username"
+                                aria-describedby="button-addon2">
+                            <button class="btn btn-primary" type="button" id="button-addon2"
+                                onclick="App.buyTokens(); return false;">Buy Tokens</button>
                         </div>
                     </div>
                 </form>
@@ -64,15 +64,13 @@
         </div>
 
     </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-        crossorigin="anonymous"></script>
+    <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="vendor/truffle-contract/dist/truffle-contract.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js"
         integrity="sha256-nWBTbvxhJgjslRyuAKJHK+XcZPlCnmIAAMixz6EefVk=" crossorigin="anonymous"></script>
-    <script src="./js/app.js"></script>
-</body>
+    <script type="text/javascript" src="https://binaries.soliditylang.org/bin/{{ SOLC VERSION }}.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
