--- a/Blockchain/ICO/src/index.html
+++ b/Blockchain/ICO/src/index.html
@@ -26,7 +26,7 @@
                 <p class="text-center">Loading...</p>
             </div>
 
-            <div id="content" class="text-center">
+            <div id="content" class="text-center" style="display: none;">
                 <p>
                     Introducing NPC Token (NPC)!!
                     Token price is <span class="token-price"></span>&nbsp;Ether.
@@ -45,13 +45,16 @@
                     </div>
                 </form>
                 <br />
+
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-label="Basic example"
-                        aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div id="progress" class="progress-bar progress-bar-striped active" role="progressbar"
+                        aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
+
                 <br />
                 <p><span class="tokens-sold"></span>/<span class="tokens-available"></span> tokens sold</p>
                 <hr />
+                <p id="accountAddress"></p>
                 <br />
                 <div class="alert alert-info" role="alert">
                     ℹ️<span style="font-weight:bold">NOTICE:</span> This token uses the Rinkeby Test Network with fake
