--- a/Blockchain/Voting App/src/index.html
+++ b/Blockchain/Voting App/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NPC Token ICO</title>
+    <title>Election Results</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
@@ -18,7 +18,7 @@
 
             <div class="col-lg-12">
                 <br />
-                <h1 class="text-center">NPC TOKEN ICO SALE</h1>
+                <h1 class="text-center">Election Results</h1>
                 <hr />
                 <br />
             </div>
@@ -46,24 +46,8 @@
                     </div>
                 </form>
                 <br />
-
-                <div class="progress">
-                    <div id="progress" class="progress-bar progress-bar-striped active" role="progressbar"
-                        aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-
-                <br />
-                <p><span class="tokens-sold"></span>/<span class="tokens-available"></span> tokens sold</p>
                 <hr />
                 <p id="accountAddress"></p>
-                <br />
-                <div class="alert alert-info" role="alert">
-                    ℹ️<span style="font-weight:bold">NOTICE:</span> This token uses the Rinkeby Test Network with fake
-                    ether. Use a browser extension like
-                    Metamask
-                    to connect to the test network and participate in the ICO. Please be patient if the test network
-                    runs slowly.
-                </div>
             </div>
         </div>
 
