Voting app final

--- a/Blockchain/Voting App/src/index.html
+++ b/Blockchain/Voting App/src/index.html
@@ -46,6 +46,8 @@
                         <hr />
                     </form>
                     <p id="accountAddress" class="text-center"></p>
+                    <h3 id="success" style="display: none;text-align: center;">Your vote was successfully submitted!!
+                    </h3>
                 </div>
             </div>
         </div>
